--- a/index.html
+++ b/index.html
@@ -26,11 +26,14 @@
         <li><a href=""></a>お土産</li>
         <li><a href=""></a>スポット</li>
         <li><i class="fa-light fa-share-nodes"><button class=""></button></i></li>
-        <ul class="menu-light">
-          <li><a href="http://" target="_blank" rel="noopener noreferrer">Facebook</a> </li>
-          <li><a href="http://" target="_blank" rel="noopener noreferrer">Twitter</a></li>
-          <li><a href="http://" target="_blank" rel="noopener noreferrer">Copy URL</a></li>
-        </ul>
+        <div class="balloon1-top">
+          <p>このページを共有する</p>
+            <li><a href="http://" target="_blank" rel="noopener noreferrer">Facebook</a> </li>
+            <li><a href="http://" target="_blank" rel="noopener noreferrer">Twitter</a></li>
+            <li><a href="http://" target="_blank" rel="noopener noreferrer">Email</a></li>
+            <li><a href="http://" target="_blank" rel="noopener noreferrer">Copy URL</a></li>
+        </div>
+      </ul>
     </nav>
 
     <ul class="slider-1" id="js-slider-1">
