--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Go Tokyo</title>
+  <title>test3</title>
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="./slick.css">
   <link rel="stylesheet" href="./slick-theme.css">
