--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>test3</title>
+  <title>Go tokyo</title>
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="./slick.css">
   <link rel="stylesheet" href="./slick-theme.css">
@@ -25,7 +25,7 @@
         <li><a href=""></a>食&グルメ</li>
         <li><a href=""></a>お土産</li>
         <li><a href=""></a>スポット</li>
-        <li><i class="fa-light fa-share-nodes"><button class=""></button></i></li>
+        <li><i class="fa-solid fa-square-share-nodes fa-lg"></i><button class=""></button></i></li>
         <div class="balloon1-top">
           <p>このページを共有する</p>
             <li><a href="http://" target="_blank" rel="noopener noreferrer">Facebook</a> </li>
