--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <li><a href=""></a>食&グルメ</li>
         <li><a href=""></a>お土産</li>
         <li><a href=""></a>スポット</li>
-        <li><i class="fa-solid fa-square-share-nodes fa-lg"></i><button class=""></button></i></li>
+        <li><i class="fa-solid fa-square-share-nodes fa-2x"></i><button class=""></button></i></li>
         <div class="balloon1-top">
           <p>このページを共有する</p>
             <li><a href="http://" target="_blank" rel="noopener noreferrer">Facebook</a> </li>
