色々追加しました

--- a/index.html
+++ b/index.html
@@ -19,13 +19,12 @@
 </head>
 
 <body>
-  <main>
-    <nav class="menu">
+  <header>
       <ul class="main-menu">
-        <li><a href=""></a>食&グルメ</li>
-        <li><a href=""></a>お土産</li>
-        <li><a href=""></a>スポット</li>
-        <li><i class="fa-solid fa-square-share-nodes fa-2x"></i><button class=""></button></i></li>
+        <li><a href="#syokugurume">食&グルメ</a></li>
+        <li><a href="">スポット</a></li>
+        <li><a href="">お土産</a></li>
+        <li><button class="button1"><i class="fa-solid fa-square-share-nodes fa-lg"></i></button></li>
         <div class="balloon1-top">
           <p>このページを共有する</p>
             <li><a href="http://" target="_blank" rel="noopener noreferrer">Facebook</a> </li>
@@ -34,17 +33,17 @@
             <li><a href="http://" target="_blank" rel="noopener noreferrer">Copy URL</a></li>
         </div>
       </ul>
-    </nav>
+  </header>
 
     <ul class="slider-1" id="js-slider-1">
-      <li><img src="https://placehold.jp/600x400.png" alt=""></li>
-      <li><img src="https://placehold.jp/600x400.png" alt=""></li>
-      <li><img src="https://placehold.jp/600x400.png" alt=""></li>
-      <li><img src="https://placehold.jp/600x400.png" alt=""></li>
+      <li><img src="./Tokyo-images/img-skytree-spot-02-sp.png" alt=""></li>
+      <li><img src="./Tokyo-images/publicdomainq-0032301sss.jpg" alt=""></li>
+      <li><img src="./Tokyo-images/2.jpg" alt=""></li>
+      <li><img src="./Tokyo-images/src_10874052.jpg" alt=""></li>
     </ul>
 
     <img class="logo" src="./Tokyo-images/xlogo_white_jp.png.pagespeed.ic.XHTXGpFOBf.webp" alt="" srcset="">
-  </main><!-- ここまで明美 -->
+  </header><!-- ここまで明美 ----------------------------------------->
 
   <div class="food&gourmet">
     <div class="container">
