縦線つけました。

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
             </dd>
           </div>
         </dl>
+        <span class="boder-line"></span>
       </li>
       <li>
         <dl>
@@ -85,6 +86,7 @@
             </dd>
           </div>
         </dl>
+        <span class="boder-line"></span>
       </li>
       <li>
         <dl>
@@ -97,6 +99,7 @@
             </dd>
           </div>
         </dl>
+        <span class="boder-line"></span>
       </li>
     </ul>
   </div>
