--- a/index.html
+++ b/index.html
@@ -10,12 +10,8 @@
   <link rel="stylesheet" href="./slick.css">
   <link rel="stylesheet" href="./slick-theme.css">
   <link rel="stylesheet" href="style.css">
-  <link
-    href="https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe&family=M+PLUS+Rounded+1c:wght@700&family=Pacifico&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans+Pinstripe&family=M+PLUS+Rounded+1c:wght@700&family=Pacifico&display=swap"rel="stylesheet">
   <script src="https://kit.fontawesome.com/c271545271.js" crossorigin="anonymous"></script>
-
-
 </head>
 
 <body>
@@ -43,7 +39,14 @@
   </ul>
 
   <img class="logo" src="./Tokyo-images/xlogo_white_jp.png.pagespeed.ic.XHTXGpFOBf.webp" alt="" srcset="">
-  </header><!-- ここまで明美 ----------------------------------------->
+  </header>
+    <div class="container1">
+      <div class="border">
+        <h1 class=""></h1>
+
+    </div>
+
+  <!-- ここまで明美 ----------------------------------------->
 
   <div class="food&gourmet">
     <div class="container">
