img追加しました。

--- a/index.html
+++ b/index.html
@@ -47,17 +47,24 @@
 
   <div class="food&gourmet">
     <div class="container">
-      <img src="https://placehold.jp/400x300.png" alt="">
+      <img src="./Tokyo-images/travelguide_123_mv.jpeg" alt="">
       <h1 id="syokugurume">食＆グルメ</h1>
+    </div>
+    <div class="inform">
+      <p>東京は、さまざまなコンテストで受賞歴のあるレストランから、
+        <br>こだわりの料理を提供する地元で親しまれる小さな食堂、ラグジュアリーな空間が広がる高級レストラン、ディナーショーや
+        <br>眺望とともに食事やお酒が楽しめるレストランやバーなど、さまざまなスタイルの飲食店が揃っています。
+        <br>ぜひ,東京観光に来た際に、行ってほしいお店をご紹介します。
+      </p>
     </div>
     <ul class="timeline">
       <li>
         <dl>
           <dt id="breakfast">Breakfast</dt>
           <div class="gohan">
-            <img src="https://placehold.jp/240x240.png" alt="">
-            <dd>テキストテキストテキストテキストテキストテキストテキストテキスト　
-              <br>テキストテキストテキストテキストテキストテキストテキストテキスト
+            <img src="./Tokyo-images/morning.jpeg" alt="">
+            <dd>
+              <br>
               <br>テキストテキストテキストテキストテキストテキストテキストテキスト
             </dd>
           </div>
@@ -68,7 +75,8 @@
         <dl>
           <dt id="lunch">Lunch</dt>
           <div class="gohan">
-            <img src="https://placehold.jp/240x240.png" alt="">
+
+            <img src="./Tokyo-images/lunch.jpeg" alt="" >
             <dd>テキストテキストテキストテキストテキストテキストテキストテキスト　
               <br>テキストテキストテキストテキストテキストテキストテキストテキスト
               <br>テキストテキストテキストテキストテキストテキストテキストテキスト
@@ -81,7 +89,7 @@
         <dl>
           <dt id="afternoontea">Afternoon tea</dt>
           <div class="gohan">
-            <img src="https://placehold.jp/240x240.png" alt="">
+            <img src="./Tokyo-images/afternoontea1.jpeg" alt="">
             <dd>テキストテキストテキストテキストテキストテキストテキストテキスト　
               <br>テキストテキストテキストテキストテキストテキストテキストテキスト
               <br>テキストテキストテキストテキストテキストテキストテキストテキスト
@@ -94,7 +102,7 @@
         <dl>
           <dt id="dinner">Dinner</dt>
           <div class="gohan">
-            <img src="https://placehold.jp/240x240.png" alt="">
+            <img src="./Tokyo-images/dinner5.jpeg" alt="">
             <dd>テキストテキストテキストテキストテキストテキストテキストテキスト　
               <br>テキストテキストテキストテキストテキストテキストテキストテキスト
               <br>テキストテキストテキストテキストテキストテキストテキストテキスト
