--- a/index.html
+++ b/index.html
@@ -20,29 +20,29 @@
 
 <body>
   <header>
-      <ul class="main-menu">
-        <li><a href="#syokugurume">食&グルメ</a></li>
-        <li><a href="">スポット</a></li>
-        <li><a href="">お土産</a></li>
-        <li><button class="button1"><i class="fa-solid fa-square-share-nodes fa-lg"></i></button></li>
-        <div class="balloon1-top">
-          <p>このページを共有する</p>
-            <li><a href="http://" target="_blank" rel="noopener noreferrer">Facebook</a> </li>
-            <li><a href="http://" target="_blank" rel="noopener noreferrer">Twitter</a></li>
-            <li><a href="http://" target="_blank" rel="noopener noreferrer">Email</a></li>
-            <li><a href="http://" target="_blank" rel="noopener noreferrer">Copy URL</a></li>
-        </div>
-      </ul>
+    <ul class="main-menu">
+      <li><a href="#syokugurume">食&グルメ</a></li>
+      <li><a href="">スポット</a></li>
+      <li><a href="">お土産</a></li>
+      <li><button class="button1"><i class="fa-solid fa-square-share-nodes fa-lg"></i></button></li>
+      <div class="balloon1-top">
+        <p>このページを共有する</p>
+        <li><a href="http://" target="_blank" rel="noopener noreferrer">Facebook</a> </li>
+        <li><a href="http://" target="_blank" rel="noopener noreferrer">Twitter</a></li>
+        <li><a href="http://" target="_blank" rel="noopener noreferrer">Email</a></li>
+        <li><a href="http://" target="_blank" rel="noopener noreferrer">Copy URL</a></li>
+      </div>
+    </ul>
   </header>
 
-    <ul class="slider-1" id="js-slider-1">
-      <li><img src="./Tokyo-images/img-skytree-spot-02-sp.png" alt=""></li>
-      <li><img src="./Tokyo-images/publicdomainq-0032301sss.jpg" alt=""></li>
-      <li><img src="./Tokyo-images/2.jpg" alt=""></li>
-      <li><img src="./Tokyo-images/src_10874052.jpg" alt=""></li>
-    </ul>
+  <ul class="slider-1" id="js-slider-1">
+    <li><img src="./Tokyo-images/img-skytree-spot-02-sp.png" alt=""></li>
+    <li><img src="./Tokyo-images/publicdomainq-0032301sss.jpg" alt=""></li>
+    <li><img src="./Tokyo-images/2.jpg" alt=""></li>
+    <li><img src="./Tokyo-images/src_10874052.jpg" alt=""></li>
+  </ul>
 
-    <img class="logo" src="./Tokyo-images/xlogo_white_jp.png.pagespeed.ic.XHTXGpFOBf.webp" alt="" srcset="">
+  <img class="logo" src="./Tokyo-images/xlogo_white_jp.png.pagespeed.ic.XHTXGpFOBf.webp" alt="" srcset="">
   </header><!-- ここまで明美 ----------------------------------------->
 
   <div class="food&gourmet">
@@ -63,7 +63,7 @@
           <dt id="breakfast">Breakfast</dt>
           <div class="gohan">
             <img src="./Tokyo-images/morning.jpeg" alt="">
-            <dd>
+            <dd>1日の始まりの食事である朝食。東京には、さまざま国
               <br>
               <br>テキストテキストテキストテキストテキストテキストテキストテキスト
             </dd>
@@ -76,7 +76,7 @@
           <dt id="lunch">Lunch</dt>
           <div class="gohan">
 
-            <img src="./Tokyo-images/lunch.jpeg" alt="" >
+            <img src="./Tokyo-images/lunch.jpeg" alt="">
             <dd>テキストテキストテキストテキストテキストテキストテキストテキスト　
               <br>テキストテキストテキストテキストテキストテキストテキストテキスト
               <br>テキストテキストテキストテキストテキストテキストテキストテキスト
@@ -113,6 +113,23 @@
       </li>
     </ul>
   </div>
+  <footer>
+    <div class="footer-container">
+      <div class="footer-left">
+        <a href="./index.html"><img src="./Tokyo-images/footerlogo.png" alt=""></a>
+      </div>
+      <div class="footer-bottom">
+
+        <div>Copyright <small>@</small>Tokyo Convention & Visitors Bureau. All rights reserved.</div>
+      </div>
+    </div>
+    <div class="footer-right">
+      <img src="./Tokyo-images/facebook.png" alt="facebook">
+      <img src="./Tokyo-images/instagram.png" alt="instagram">
+      <img src="./Tokyo-images/twitter.jpeg" alt="twitter">
+      <img src="./Tokyo-images/youtube.png" alt="twitter">
+    </div>
+  </footer>
 
   <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script defer type="text/javascript" src="./slick.min.js"></script>
