--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
           <dt id="breakfast">Breakfast</dt>
           <div class="gohan">
             <img src="./Tokyo-images/morning.jpeg" alt="">
-            <dd>1日の始まりの食事である朝食。東京には、さまざま国
-              <br>
-              <br>テキストテキストテキストテキストテキストテキストテキストテキスト
+            <dd>朝ご飯は、一日の活力になる大事な食事の1つですよね。
+              <br>そんな朝食にこだわって、とっておきの一日を過ごしてみてはいかがでしょうか。
+              <br>東京都内でいただける絶品の朝食をいただけるお店をご紹介します。
             </dd>
           </div>
         </dl>
