--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
   <div class="food&gourmet">
     <div class="container">
-      <img src="./Tokyo-images/travelguide_123_mv.jpeg" alt="">
+     <p class="fadein"><img src="./Tokyo-images/travelguide_123_mv.jpeg" alt=""></p>
       <h1 id="syokugurume">食＆グルメ</h1>
     </div>
     <div class="inform">
@@ -69,6 +69,9 @@
             <dd>朝ご飯は、一日の活力になる大事な食事の1つですよね。
               <br>そんな朝食にこだわって、とっておきの一日を過ごしてみてはいかがでしょうか。
               <br>東京都内でいただける絶品の朝食をいただけるお店をご紹介します。
+              <br>
+              <br><a href="">more
+              </a>
             </dd>
           </div>
         </dl>
@@ -80,9 +83,12 @@
           <div class="gohan">
 
             <img src="./Tokyo-images/lunch.jpeg" alt="">
-            <dd>テキストテキストテキストテキストテキストテキストテキストテキスト　
-              <br>テキストテキストテキストテキストテキストテキストテキストテキスト
-              <br>テキストテキストテキストテキストテキストテキストテキストテキスト
+            <dd>毎日のランチは1日の楽しみでもありますよね！
+              <br>東京都内には洋食や和食など多種多様におすすめしたいお店が盛りだくさん！
+              <br>休日にお出かけした際や、お仕事で立ち寄った際にランチの場所
+              <br>というお店をご紹介します。
+              <br>
+              <br><a href="">more
             </dd>
           </div>
         </dl>
@@ -93,9 +99,11 @@
           <dt id="afternoontea">Afternoon tea</dt>
           <div class="gohan">
             <img src="./Tokyo-images/afternoontea1.jpeg" alt="">
-            <dd>テキストテキストテキストテキストテキストテキストテキストテキスト　
-              <br>テキストテキストテキストテキストテキストテキストテキストテキスト
-              <br>テキストテキストテキストテキストテキストテキストテキストテキスト
+            <dd>東京はおしゃれでかわいいカフェが集まる街！　
+              <br>可愛いスイーツが話題のお店や、おしゃれカフェ飯が食べられるご紹介します。
+              <br>ぜひ、東京に来た際には訪れてみてください。
+              <br>
+              <br><a href="">more
             </dd>
           </div>
         </dl>
@@ -106,9 +114,15 @@
           <dt id="dinner">Dinner</dt>
           <div class="gohan">
             <img src="./Tokyo-images/dinner5.jpeg" alt="">
-            <dd>テキストテキストテキストテキストテキストテキストテキストテキスト　
-              <br>テキストテキストテキストテキストテキストテキストテキストテキスト
-              <br>テキストテキストテキストテキストテキストテキストテキストテキスト
+            <dd>東京には、美味しいレストランやカフェ、バーなどが集まったエリア
+              <br>がたくさんあります。食べ歩きにおすすめの地区、特別な日に訪れたい
+              <br>お洒落ストリート、らっとひとりで立ち寄りたい飲み屋街など、
+              <br>スタイルに合わせて選び放題。町グルメや、魚、肉、エスニック料理など、
+              <br>食べたい料理で目的地を選択するのもいいですね。歴史風情漂う地区から、
+              <br>話題のグルメスポットまで、間違いなくおいしい食べ物に出会える、
+              <br>東京のグルメエリアをご紹介します。
+              <br>
+              <br><a href="">more
             </dd>
           </div>
         </dl>
